remove infinite caurosel

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
             $('.task-carousel').slick({
                 slidesToShow: 2,
                 slidesToScroll: 1,
-                infinite: true,
+                infinite: false,
                 arrows: true,
                 dots: false,
                 // variableWidth: true, // Can cause issues if not configured perfectly with CSS
