--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- <base href="/"> -->
 
         <!--FACEBOOK-->
-    <meta property="og:image" content="https://bar-x-anon.github.io/img/BARX/barx_figure_v3.jpeg">
+    <meta property="og:image" content="https://bar-x-anon.github.io/img/BARX/barx_figure_v4.jpeg">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="682">
     <meta property="og:image:height" content="682">
@@ -98,19 +98,23 @@
         
         /* Carousel Styles */
         .slick-prev:before, .slick-next:before {
-            color: #3273dc;
-            font-size: 32px;
+            color: #ff4500; /* Brighter color (orange-red) */
+            font-size: 36px; /* Larger font size */
+            opacity: 0.9; /* Higher opacity */
+            text-shadow: 0 0 5px rgba(0,0,0,0.2); /* Subtle shadow */
         }
         .slick-prev, .slick-next {
             z-index: 10;
-            width: 40px;
-            height: 40px;
+            width: 50px; /* Larger clickable area */
+            height: 50px;
+            background-color: rgba(255,255,255,0.5); /* Semi-transparent background */
+            border-radius: 50%; /* Circular shape */
         }
         .slick-prev {
-            left: -10px;
+            left: -25px; /* Move further out */
         }
         .slick-next {
-            right: -10px;
+            right: -25px; /* Move further out */
         }
         .video-thumb {
             margin: 0 5px; /* Let Slick handle horizontal spacing primarily */
@@ -154,6 +158,17 @@
             margin-top: 40px;
             margin-bottom: 40px;
         }
+        .nav-pills.nav-justified > li {
+            margin-left: 10px;
+            margin-right: 10px;
+            /* Reduce default spacing */
+        }
+        @media (max-width: 768px) {
+            .nav-pills.nav-justified > li {
+                margin-left: 5px;
+                margin-right: 5px;
+            }
+        }
     </style>
 </head>
 
@@ -161,10 +176,10 @@
     <div class="container" id="main">
         <div class="row">
             <h2 class="col-md-12 text-center">
-                <strong><font size="+8">Cross-Embodiment Generalization via Behavior-Aligned Representations</font></strong> </br>
+                <strong><font size="+8">Cross-Embodiment Generalization<br>via Behavior-Aligned Representations</font></strong> </br>
             </h2>
         </div>
-        <div class="row" style="margin-top: -30px;">
+        <div class="row" style="margin-top: -10px;">
             <div class="col-md-12 text-center authors">
                 <ul class="list-inline">
                 <br>
@@ -173,12 +188,18 @@
         </div>
 
         <div class="row">
-            <div class="col-md-12">
-                <ul class="nav nav-pills nav-justified">
+            <div class="col-md-8 col-md-offset-2">
+                <ul class="nav nav-pills nav-justified" style="max-width: 300px; margin: 0 auto;">
                     <li>
                         <a href="img/pdfs/paper.pdf" target="_blank">
                         <image src="img/paper.png" height="60px">
                             <h4><strong>Paper</strong></h4>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="javascript:void(0);" style="pointer-events: none; cursor: default; text-decoration: none;" onclick="return false;">
+                            <img src="img/dataset.201x256.png" height="60px">
+                            <h4 style="color: #000;"><strong>Dataset (coming soon)</strong></h4>
                         </a>
                     </li>
                     <!-- <li>
@@ -206,16 +227,16 @@
         <div style="width: 90%; margin: 30px auto 0;">
             <div style="display: flex; flex-direction: column; align-items: center;">
                 
-                <a href="https://bar-x-anon.github.io/img/BARX/barx_figure_v3.jpeg" target="_blank" style="display: flex; justify-content: center; width: 100%; margin-top: -60px; text-decoration: none;"> <!-- margin-top: -80px; -->
+                <a href="https://bar-x-anon.github.io/img/BARX/barx_figure_v4.jpeg" target="_blank" style="display: flex; justify-content: center; width: 100%; margin-top: -0px; text-decoration: none;"> <!-- margin-top: -80px; -->
                     <video id="methodVideo" autoplay muted playsinline style="width: 120%; height: auto;"> <!-- Adjust this width percentage to resize the video -->
-                        <source src="img/videos/barx_figures_compressed_18_speedup.mp4" type="video/mp4">
-                        <!-- <img src="img/BARX/barx_method_v1.png" alt="BARX method visualization" style="width: 100%; height: auto;"> -->
+                        <source src="img/videos/barx_figures_v4_compressed_19.mp4" type="video/mp4">
+                        <img src="img/BARX/barx_figures_v4.jpg" alt="BARX method visualization" style="width: 100%; height: auto;">
                     </video>
                 </a>
                 <div style="margin-top: 20px; text-align: left; width: 100%;">
                     <p style="font-size: 1.0em; line-height: 1.4; color: #555; font-style: italic;">
                         <b>Left</b>: We consider cross-embodiment datasets of both simulated and real-world robots. We then
-                        extract behavior-aligned representations: language motions via heuristics using end effector pose deltas, end-effector traces via segmentation models, and bounding boxes via Grounding DINO. 
+                        extract behavior-aligned representations: <b style="color: #4da72e">language motions</b> via heuristics using end effector pose deltas, <b style="color: #c6a623">end-effector traces</b> via segmentation models, and <b style="color: #c020d8">bounding boxes</b> via Grounding DINO. 
                         <b>Right</b>: BARX trains VLAs to predict actions with or without first predicting representations. This enhances transfer from cross-embodiment
                         datasets, without needing representations during inference.
                     </p>
@@ -245,7 +266,7 @@
             <div class="col-md-12">
                 <h2>Abstract</h2>
                 <p>
-                    Recent progress in large-scale imitation learning for robot manipulation has been driven by leveraging datasets across a wide range of robot embodiments. However, while prior work on cross-embodiment learning has shown signs of positive transfer, achieving significant transfer is often still challenging. In this work, we propose using behavior-aligned representations (e.g., object bounding boxes, language motions, 2D end effector traces) as a scalable means of unifying diverse data across embodiments to enhance transfer. Our approach, BARX, incorporates these representations by simply training vision-language-action (VLA) models to predict them in tandem with actions as a single sequence. Our experiments show that BARX can significantly improve transfer from diverse cross-embodiment datasets to new embodiments. When learning from such datasets in simulation, BARX improves success rate by <b>13.8%</b> when evaluated zero-shot on unseen embodiments, and by <b>16.0%</b> when adapting with limited data. BARX is also able to enhance sim-to-real cross-embodiment transfer, improving task completion progress of real robot policies pre-trained on simulation data by <b>28.3%</b>.
+                    Recent progress in large-scale imitation learning for robot manipulation has been driven by leveraging datasets across a wide range of robot embodiments. However, while prior work on cross-embodiment learning has shown signs of positive transfer, achieving significant transfer is often still challenging. In this work, we propose using behavior-aligned representations (e.g., <b style="color: #c020d8">object bounding boxes</b>, <b style="color: #4da72e">language motions</b>, <b style="color: #c6a623">2D end effector traces</b>) as a scalable means of unifying diverse data across embodiments to enhance transfer. Our approach, BARX, incorporates these representations by simply training vision-language-action (VLA) models to predict them in tandem with actions as a single sequence. Our experiments show that <b>BARX can significantly improve transfer from diverse cross-embodiment datasets to new embodiments.</b> When learning from such datasets in simulation, <b>BARX improves success rate by 13.8% when evaluated zero-shot on unseen embodiments, and by 16.0% when adapting with limited data.</b> BARX is also able to enhance sim-to-real cross-embodiment transfer, <b>improving task completion progress of real robot policies pre-trained on simulation data by 28.3%</b>.
                 </p>
             </div>
         </div>
@@ -462,7 +483,7 @@
                         For our real-world experiments, we adapt our models to the ViperX 300 S and the Franka Research 3.
                         This is especially challenging because we have to deal with the sim-to-real gap in addition to the cross-embodiment gap.
                         We found that training with the representations was particularly beneficial for the <i>PnP Sink to Counter</i> task. 
-                        The target was difficult to spot in certain locations, so using representations such as bounding boxes helped the model locate the object.
+                        The target was difficult to spot in certain locations, so using representations such as <b style="color: #c020d8">bounding boxes</b> helped the model locate the object.
                         BARX improves the task progress over the cross-embodiment baseline on average by <b>28.3%</b>.
                     </p>
                     <div class="task-block" id="task-2">
