--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- <base href="/"> -->
 
         <!--FACEBOOK-->
-    <meta property="og:image" content="https://bar-x-anon.github.io/img/BARX/barx_figure_v4.jpeg">
+    <meta property="og:image" content="https://bar-x-anon.github.io/img/BARX/barx_figure_v4.jpg">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="682">
     <meta property="og:image:height" content="682">
@@ -227,7 +227,7 @@
         <div style="width: 90%; margin: 30px auto 0;">
             <div style="display: flex; flex-direction: column; align-items: center;">
                 
-                <a href="https://bar-x-anon.github.io/img/BARX/barx_figure_v4.jpeg" target="_blank" style="display: flex; justify-content: center; width: 100%; margin-top: -0px; text-decoration: none;"> <!-- margin-top: -80px; -->
+                <a href="https://bar-x-anon.github.io/img/BARX/barx_figure_v4.jpg" target="_blank" style="display: flex; justify-content: center; width: 100%; margin-top: -0px; text-decoration: none;"> <!-- margin-top: -80px; -->
                     <video id="methodVideo" autoplay muted playsinline style="width: 120%; height: auto;"> <!-- Adjust this width percentage to resize the video -->
                         <source src="img/videos/barx_figures_v4_compressed_19.mp4" type="video/mp4">
                         <img src="img/BARX/barx_figures_v4.jpg" alt="BARX method visualization" style="width: 100%; height: auto;">
