add robocasa examples fig

--- a/index.html
+++ b/index.html
@@ -396,6 +396,9 @@
         <section id="videos" class="section">
             <div class="container is-max-desktop content-container">
                 <h2 class="title is-3 has-text-centered">Adaptation to New Embodiments</h2>
+                <div style="display: flex; justify-content: center; margin-top: 40px; margin-bottom: 40px;" class="chart-container">
+                    <img src="img/robocasa_examples.jpg" alt="RoboCasa Embodiments" style="max-width: 100%; height: auto;">
+                </div>
 
                 <p class="has-text-justified">
                     We train models on X-Prior-300 and X-Prior-1000, a medium- and large-scale cross-embodiment simulation dataset with three robots in <a href="https://robocasa.ai" target="_blank">RoboCasa</a>: the Kinova, UR5e, and IIWA.
@@ -530,7 +533,7 @@
             </div>
         </section>
 
-        <hr class="section-divider">
+        <!-- <hr class="section-divider">
 
         <section id="videos" class="section">
             <div class="container is-max-desktop content-container">
@@ -551,7 +554,9 @@
             </div>
         </section>
 
-        <hr class="section-divider">
+        <hr class="section-divider"> -->
+
+        
 
 
         
