--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>BARX</title>
+    <title>Cross-Embodiment Generalization via Behavior-Aligned Representations</title>
 
     <meta name="description" content="Cross-Embodiment Generalization via Behavior-Aligned Representations">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -266,7 +266,6 @@
             <div class="col-md-12">
                 <h2>Abstract</h2>
                 <p>
-                    <!-- Recent progress in large-scale imitation learning for robot manipulation has been driven by leveraging datasets across a wide range of robot embodiments. However, while prior work on cross-embodiment learning has shown signs of positive transfer, achieving significant transfer is often still challenging. In this work, we propose using behavior-aligned representations (e.g., <b style="color: #c020d8">object bounding boxes</b>, <b style="color: #4da72e">language motions</b>, <b style="color: #c6a623">2D end effector traces</b>) as a scalable means of unifying diverse data across embodiments to enhance transfer. Our approach, BARX, incorporates these representations by simply training vision-language-action (VLA) models to predict them in tandem with actions as a single sequence. Our experiments show that <b>BARX can significantly improve transfer from diverse cross-embodiment datasets to new embodiments.</b> When learning from such datasets in simulation, <b>BARX improves success rate by 13.8% when evaluated zero-shot on unseen embodiments, and by 16.0% when adapting with limited data.</b> BARX is also able to enhance sim-to-real cross-embodiment transfer, <b>improving task completion progress of real robot policies pre-trained on simulation data by 28.3%</b>. -->
                     Recent progress in large-scale imitation learning for robot manipulation has been driven by leveraging datasets across a wide range of robot embodiments. However, achieving significant cross-embodiment transfer is often still challenging. In this work, we study the role of using behavior-aligned representations(e.g., <b style="color: #c020d8">object bounding boxes</b>, <b style="color: #4da72e">language motions</b>, <b style="color: #c6a623">2D end effector traces</b>) in vision-language-action (VLA) models to promote cross-embodiment transfer. We hypothesize that by carrying invariance across different embodiments while being predictive of robot actions, these representations can help unify diverse cross-embodiment data to enhance transfer in a scalable manner. We assess our hypothesis by developing a simulation-based benchmark designed to assess transfer with diverse, cross-embodiment data to new embodiments. Using this benchmark, we compare different representations and ways of incorporating them. Through our experiments, we identify that <b>end-effector traces can be particularly beneficial for transfer</b>, representations are generally more useful with larger cross-embodiment datasets, and can be used to benefit from action-free data. We also demonstrate that they can enhance sim-to-real cross-embodiment transfer, <b>improving task completion progress of real robot policies pre-trained on simulation data by 28%</b>.
 
                 </p>
@@ -282,7 +281,7 @@
                 <h2 class="title is-3 has-text-centered">Visualizations of Behavior-Aligned Representations</h2>
 
                 <p class="has-text-justified">
-                    These visualizations demonstrate BARX's predicted behavior-aligned representations for real and simulated robots: <b style="color: #4da72e">language motions</b>, <b style="color: #c6a623">2D end-effector traces</b>, and <b style="color: #c020d8">target object bounding boxes</b>.
+                    These visualizations demonstrate predicted behavior-aligned representations for real and simulated robots: <b style="color: #4da72e">language motions</b>, <b style="color: #c6a623">2D end-effector traces</b>, and <b style="color: #c020d8">target object bounding boxes</b>.
                 </p>
                 
                 
@@ -489,7 +488,7 @@
                         This is especially challenging because we have to deal with the sim-to-real gap in addition to the cross-embodiment gap.
                         We found that training with the representations was particularly beneficial for the <i>PnP Sink to Counter</i> task. 
                         The target was difficult to spot in certain locations, so using representations such as <b style="color: #c020d8">bounding boxes</b> helped the model locate the object.
-                        BARX improves the task progress over the cross-embodiment baseline on average by <b>28.3%</b>.
+                        Training with representations improves the task progress over the cross-embodiment baseline on average by <b>28.3%</b>.
                     </p>
                     <div class="task-block" id="task-2">
                         <div class="task-carousel">
