--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     <p style="font-size: 1.0em; line-height: 1.4; color: #555; font-style: italic;">
                         <b>Left</b>: We consider cross-embodiment datasets of both simulated and real-world robots. We then
                         extract behavior-aligned representations: <b style="color: #4da72e">language motions</b> via heuristics using end effector pose deltas, <b style="color: #c6a623">end-effector traces</b> via segmentation models, and <b style="color: #c020d8">bounding boxes</b> via Grounding DINO. 
-                        <b>Right</b>: BARX trains VLAs to predict actions with or without first predicting representations. This enhances transfer from cross-embodiment
+                        <b>Right</b>: We train VLAs to predict actions with or without first predicting representations. This enhances transfer from cross-embodiment
                         datasets, without needing representations during inference.
                     </p>
                 </div>
