--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <div class="col-md-8 col-md-offset-2">
                 <ul class="nav nav-pills nav-justified" style="max-width: 300px; margin: 0 auto;">
                     <li>
-                        <a href="img/pdfs/paper.pdf" target="_blank">
+                        <a href="img/pdfs/anon_icra.pdf" target="_blank">
                         <image src="img/paper.png" height="60px">
                             <h4><strong>Paper</strong></h4>
                         </a>
@@ -266,7 +266,7 @@
             <div class="col-md-12">
                 <h2>Abstract</h2>
                 <p>
-                    Recent progress in large-scale imitation learning for robot manipulation has been driven by leveraging datasets across a wide range of robot embodiments. However, achieving significant cross-embodiment transfer is often still challenging. In this work, we study the role of using behavior-aligned representations(e.g., <b style="color: #c020d8">object bounding boxes</b>, <b style="color: #4da72e">language motions</b>, <b style="color: #c6a623">2D end effector traces</b>) in vision-language-action (VLA) models to promote cross-embodiment transfer. We hypothesize that by carrying invariance across different embodiments while being predictive of robot actions, these representations can help unify diverse cross-embodiment data to enhance transfer in a scalable manner. We assess our hypothesis by developing a simulation-based benchmark designed to assess transfer with diverse, cross-embodiment data to new embodiments. Using this benchmark, we compare different representations and ways of incorporating them. Through our experiments, we identify that <b>end-effector traces can be particularly beneficial for transfer</b>, representations are generally more useful with larger cross-embodiment datasets, and can be used to benefit from action-free data. We also demonstrate that they can enhance sim-to-real cross-embodiment transfer, <b>improving task completion progress of real robot policies pre-trained on simulation data by 28%</b>.
+                    Recent progress in large-scale imitation learning for robot manipulation has been driven by leveraging datasets across a wide range of robot embodiments. However, achieving significant cross-embodiment transfer is often still challenging. In this work, we study the role of using behavior-aligned representations(e.g., <b style="color: #c020d8">object bounding boxes</b>, <b style="color: #4da72e">language motions</b>, <b style="color: #c6a623">2D end effector traces</b>) in vision-language-action (VLA) models to promote cross-embodiment transfer. We hypothesize that by carrying invariance across different embodiments while being predictive of robot actions, these representations can help unify diverse cross-embodiment data to enhance transfer in a scalable manner. We assess our hypothesis by developing a simulation-based benchmark designed to assess transfer with diverse, cross-embodiment data to new embodiments. Using this benchmark, we compare different representations and ways of incorporating them. Through our experiments, we identify that end-effector traces can be particularly beneficial for transfer, representations are generally more useful with larger cross-embodiment datasets, and can be used to benefit from action-free data. We also demonstrate that they can enhance sim-to-real cross-embodiment transfer, <b>improving task completion progress of real robot policies pre-trained on simulation data by 28%</b>.
 
                 </p>
             </div>
