add mug and sink comparison sim vids

--- a/index.html
+++ b/index.html
@@ -425,6 +425,8 @@
                         The baselines make progress on the tasks, such as moving the gripper to the target object, but often fail to complete more precise motions like grasping the object in the correct orientation.
                         
                      </p>
+                     <h3 class="title is-4 task-title">Comparison Rollouts for PnP Tasks</h3>
+
                     <div class="task-carousel">
                         <!-- Video Thumbnails - Replace sources with your own videos -->
                         <div class="video-thumb">
@@ -475,6 +477,92 @@
                                 <source src="img/videos/barx_sim_rollouts/panda/pnpsinktocounter/orange_pnpsinktocounter_panda_4x_comparison_compressed.mp4" type="video/mp4">
                             </video>
                             <div class="video-caption">Panda - Orange - PnP Sink to Counter (4x speed)</div>
+                        </div>
+                    </div>
+
+                    <h3 class="title is-4 task-title">Comparison Rollouts for <i>Flip Mug Upright</i></h3>
+
+                    <div class="task-carousel">
+                        <!-- Video Thumbnails - Replace sources with your own videos -->
+                        <div class="video-thumb">
+                            <video class="thumb-video" autoplay loop muted playsinline preload="metadata">
+                                <source src="img/videos/barx_sim_rollouts/panda/flip_mug/ep9_flip_mug_panda_4x_comparison_compressed.mp4" type="video/mp4">
+                            </video>
+                            <div class="video-caption">Panda (4x speed)</div>
+                        </div>
+                        <div class="video-thumb">
+                            <video class="thumb-video" autoplay loop muted playsinline preload="metadata">
+                                <source src="img/videos/barx_sim_rollouts/jaco/flip_mug/ep2_flip_mug_jaco_4x_comparison_compressed.mp4" type="video/mp4">
+                            </video>
+                            <div class="video-caption">Jaco (4x speed)</div>
+                        </div>
+                        <div class="video-thumb">
+                            <video class="thumb-video" autoplay loop muted playsinline preload="metadata">
+                                <source src="img/videos/barx_sim_rollouts/panda/flip_mug/ep10_flip_mug_panda_4x_comparison_compressed.mp4" type="video/mp4">
+                            </video>
+                            <div class="video-caption">Panda (4x speed)</div>
+                        </div>
+                        <div class="video-thumb">
+                            <video class="thumb-video" autoplay loop muted playsinline preload="metadata">
+                                <source src="img/videos/barx_sim_rollouts/jaco/flip_mug/ep29_flip_mug_jaco_4x_comparison_compressed.mp4" type="video/mp4">
+                            </video>
+                            <div class="video-caption">Jaco (4x speed)</div>
+                        </div>
+                        <!--second iteration-->
+                        <div class="video-thumb">
+                            <video class="thumb-video" autoplay loop muted playsinline preload="metadata">
+                                <source src="img/videos/barx_sim_rollouts/panda/flip_mug/ep12_flip_mug_panda_4x_comparison_compressed.mp4" type="video/mp4">
+                            </video>
+                            <div class="video-caption">Panda (4x speed)</div>
+                        </div>
+                        <div class="video-thumb">
+                            <video class="thumb-video" autoplay loop muted playsinline preload="metadata">
+                                <source src="img/videos/barx_sim_rollouts/jaco/flip_mug/ep87_flip_mug_jaco_4x_comparison_compressed.mp4" type="video/mp4">
+                            </video>
+                            <div class="video-caption">Jaco (4x speed)</div>
+                        </div>
+                    </div>
+
+                    <h3 class="title is-4 task-title">Comparison Rollouts for <i>Turn On Sink Faucet</i></h3>
+
+                    <div class="task-carousel">
+                        <!-- Video Thumbnails - Replace sources with your own videos -->
+                        <div class="video-thumb">
+                            <video class="thumb-video" autoplay loop muted playsinline preload="metadata">
+                                <source src="img/videos/barx_sim_rollouts/panda/turn_on_sink/ep2_turn_on_sink_panda_4x_comparison_compressed.mp4" type="video/mp4">
+                            </video>
+                            <div class="video-caption">Panda (4x speed)</div>
+                        </div>
+                        <div class="video-thumb">
+                            <video class="thumb-video" autoplay loop muted playsinline preload="metadata">
+                                <source src="img/videos/barx_sim_rollouts/jaco/turn_on_sink/ep2_turn_on_sink_jaco_4x_comparison_compressed.mp4" type="video/mp4">
+                            </video>
+                            <div class="video-caption">Jaco (4x speed)</div>
+                        </div>
+                        <div class="video-thumb">
+                            <video class="thumb-video" autoplay loop muted playsinline preload="metadata">
+                                <source src="img/videos/barx_sim_rollouts/panda/turn_on_sink/ep20_turn_on_sink_panda_4x_comparison_compressed.mp4" type="video/mp4">
+                            </video>
+                            <div class="video-caption">Panda (4x speed)</div>
+                        </div>
+                        <div class="video-thumb">
+                            <video class="thumb-video" autoplay loop muted playsinline preload="metadata">
+                                <source src="img/videos/barx_sim_rollouts/jaco/turn_on_sink/ep21_turn_on_sink_jaco_4x_comparison_compressed.mp4" type="video/mp4">
+                            </video>
+                            <div class="video-caption">Jaco (4x speed)</div>
+                        </div>
+                        <!--second iteration-->
+                        <div class="video-thumb">
+                            <video class="thumb-video" autoplay loop muted playsinline preload="metadata">
+                                <source src="img/videos/barx_sim_rollouts/panda/turn_on_sink/ep63_turn_on_sink_panda_4x_comparison_compressed.mp4" type="video/mp4">
+                            </video>
+                            <div class="video-caption">Panda (4x speed)</div>
+                        </div>
+                        <div class="video-thumb">
+                            <video class="thumb-video" autoplay loop muted playsinline preload="metadata">
+                                <source src="img/videos/barx_sim_rollouts/jaco/turn_on_sink/ep75_turn_on_sink_jaco_4x_comparison_compressed.mp4" type="video/mp4">
+                            </video>
+                            <div class="video-caption">Jaco (4x speed)</div>
                         </div>
                     </div>
 
