gen to transfer

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>Cross-Embodiment Generalization via Behavior-Aligned Representations</title>
+    <title>Cross-Embodiment Transfer via Behavior-Aligned Representations</title>
 
-    <meta name="description" content="Cross-Embodiment Generalization via Behavior-Aligned Representations">
+    <meta name="description" content="Cross-Embodiment Transfer via Behavior-Aligned Representations">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=default'></script>
     <!-- <base href="/"> -->
@@ -19,13 +19,13 @@
     <meta property="og:image:height" content="682">
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://bar-x-anon.github.io/"/>
-    <meta property="og:title" content="Cross-Embodiment Generalization via Behavior-Aligned Representations" />
-    <meta property="og:description" content="Project page for Cross-Embodiment Generalization via Behavior-Aligned Representations." />
+    <meta property="og:title" content="Cross-Embodiment Transfer via Behavior-Aligned Representations" />
+    <meta property="og:description" content="Project page for Cross-Embodiment Transfer via Behavior-Aligned Representations." />
 
         <!--TWITTER-->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Cross-Embodiment Generalization via Behavior-Aligned Representations" />
-    <meta name="twitter:description" content="Project page for Cross-Embodiment Generalization via Behavior-Aligned Representations." />
+    <meta name="twitter:title" content="Cross-Embodiment Transfer via Behavior-Aligned Representations" />
+    <meta name="twitter:description" content="Project page for Cross-Embodiment Transfer via Behavior-Aligned Representations." />
     <!-- <meta name="twitter:image" content="https://rt-h.github.io/img/random_img_frames.png" /> -->
 
 
@@ -176,7 +176,7 @@
     <div class="container" id="main">
         <div class="row">
             <h2 class="col-md-12 text-center">
-                <strong><font size="+8">Cross-Embodiment Generalization<br>via Behavior-Aligned Representations</font></strong> </br>
+                <strong><font size="+8">Cross-Embodiment Transfer<br>via Behavior-Aligned Representations</font></strong> </br>
             </h2>
         </div>
         <div class="row" style="margin-top: -10px;">
